--- a/sample/src/main/res/layout/fragment_authentication.xml
+++ b/sample/src/main/res/layout/fragment_authentication.xml
@@ -43,8 +43,13 @@
             android:layout_marginTop="10dp"
             android:text="@string/btn_login" />
 
-
-
+        <Button
+            android:id="@+id/btnRegister"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/btn_register" />
     </LinearLayout>
 
 </LinearLayout>
